# code-review-env

./: .gitignore  Dockerfile  README.md  SPACES_README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
graders/: scorer.py
openenv-code-review/: app.py  server.py
openenv-code-review/environment/: env.py  models.py
openenv-code-review/tasks/: definitions.py
openenv-code-review/tests/: test_env.py
server/: app.py
tasks/: definitions.py
